--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -21,9 +21,17 @@ $app-direction: ltr;
 // the Sass variables found in Ionic's source scss files.
 // To view all the possible Ionic variables, see:
 // http://ionicframework.com/docs/theming/overriding-ionic-variables/
+@font-face {
+  font-family: 'OpenSans';
+  src:url('../assets/fonts/OpenSans-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+ }
 
-
-
+ $font-family-base: "OpenSans";
+ $font-family-ios-base: $font-family-base;
+ $font-family-md-base: $font-family-base;
+ $font-family-wp-base: $font-family-base;
 
 // Named Color Variables
 // --------------------------------------------------
@@ -38,15 +46,16 @@ $colors: (
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
-  dark:       #222
+  dark:       #222,
+  frypto: (
+    base: #EB2F64,
+    contrast: #F4F4F4
+  )
 );
-
 
 // App iOS Variables
 // --------------------------------------------------
 // iOS only Sass variables can go here
-
-
 
 
 // App Material Design Variables
@@ -86,3 +95,5 @@ $colors: (
 
 @import "roboto";
 @import "noto-sans";
+
+
