--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,18 +1,22 @@
 page-home {
-    .ion-item-input-group {
+    .ion-content-group {
         border: 1px solid #BA265D;
-        border-radius: 4px;
+        border-radius: 4px;        
         padding-left: 10px;
         padding-right: 10px;
-        margin-bottom: 5px; 
-        
-        ion-label {
-            margin-bottom: 2px;
-        }
+        width: 100%;
+    }  
 
-        ion-input {
-            font-weight: bold; 
-            font-size: 20px;
-        }
+    .ion-content-group-2 {
+        width: 100%;    
     }
+
+    ion-label {
+        margin-bottom: 2px;
+    }
+
+    ion-input {
+        font-weight: bold; 
+        font-size: 20px;
+    }    
 }
