add margin to item flight

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -11,6 +11,10 @@ page-home {
         width: 100%;    
     }
 
+    .ion-item-flight {
+        margin-bottom: 20px;
+    }
+
     ion-label {
         margin-bottom: 2px;
     }
